# halite-actreess-bot

./: .gitignore  CMakeLists.txt  Makefile  MyBot  MyBot.cpp  MyBot_last.py  MyBot_v1.py  MyBot_v2.py  MyBot_v3.py  MyBot_v4.py  MyBot_v5.py  MyBot_v6.py  clear_data.sh  codestyle.xml  logp_time.sh  run_game.sh  test_bot.sh  test_bot_win.sh
bot/: bot.cpp  bot.h  drone.h  router.h  tag_list.h  timer.h
bot/debug/: gizmos.h  timer.h
bot/entities/: drone.h  entity.h
bot/mapping/: connection.h  force_map.h  imap.h  point.h
bot/routing/: node.h  path.h  pathfinder.h  pathfinding.h  router.h
hlt/: collision.hpp  entity.hpp  hlt.hpp  location.cpp  location.hpp  map.cpp  map.hpp  navigation.hpp
hlt_py/: Networking.java  Ship.java
